<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrationPage"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="35dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">




        <EditText
            android:id="@+id/etfname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/FirstName"/>

        <EditText
            android:id="@+id/etlname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LastName"/>

        <EditText
            android:id="@+id/etemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"/>

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="numberPassword"/>
        <EditText
            android:id="@+id/etphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone Number"
            android:inputType="phone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/balck">

        <Button
            android:id="@+id/btnRegister2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:background="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Already \nHave An\nAccount"
            android:textStyle="italic"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnSignin2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"
            android:background="@color/colorAccent"/>

    </LinearLayout>





</LinearLayout>



</ScrollView>
